# jeig

./: .bumpversion.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: build-ci.yml
notebooks/: test.ipynb
src/jeig/: __init__.py  _eig.py  eig.py  jeig.py
tests/: test_eig.py  test_jeig.py
